# asha-engine

./: .gitignore  AGENTS.md  README.md  agents-project.md  asha-studio-3465-agora-capture.json  asha-studio-3465-agora-launch.json  asha-studio-3465-agora-session.json  asha-studio-3465-dev-5174.pid  asha-studio-3465-dev.pid  package.json
engine-rs/: Cargo.toml
engine-rs/crates/bridge/native-bridge/: Cargo.toml  README.md  build.rs
engine-rs/crates/bridge/native-bridge/src/: animation_projection.rs  camera.rs  fps.rs  generated_tunnel.rs  input_session.rs  lib.rs  procedural_environment.rs  project_content.rs  project_source.rs  render_projection.rs  resource_limit_tests.rs  scene_preview.rs  tests.rs  time_control.rs  voxel_assets.rs  voxel_readout.rs  wire.rs
engine-rs/crates/bridge/runtime-bridge-api/: Cargo.toml  MANIFEST-FORMAT.md  bridge-manifest.toml
engine-rs/crates/bridge/runtime-bridge-api/src/: bridge.rs  buffer_provider.rs  errors.rs  handles.rs  lib.rs  payloads.rs
engine-rs/crates/foundation/core-ids/src/: lib.rs
engine-rs/crates/foundation/core-space/: Cargo.toml
engine-rs/crates/foundation/core-space/src/: direction.rs  grid.rs  lib.rs  region.rs  voxel.rs  world.rs
engine-rs/crates/protocol/protocol-assets/: Cargo.toml
engine-rs/crates/protocol/protocol-assets/src/: lib.rs
engine-rs/crates/protocol/protocol-codegen/: Cargo.toml
engine-rs/crates/protocol/protocol-codegen/src/: lib.rs  model.rs  schema.rs  source.rs
engine-rs/crates/protocol/protocol-diagnostics/: Cargo.toml
engine-rs/crates/protocol/protocol-diagnostics/src/: lib.rs
engine-rs/crates/protocol/protocol-entity-authoring/: Cargo.toml
engine-rs/crates/protocol/protocol-entity-authoring/src/: lib.rs
engine-rs/crates/protocol/protocol-game-extension/src/: fabric.rs
engine-rs/crates/protocol/protocol-policy-view/: Cargo.toml
engine-rs/crates/protocol/protocol-policy-view/src/: lib.rs
engine-rs/crates/protocol/protocol-presentation/: Cargo.toml
engine-rs/crates/protocol/protocol-presentation/src/: lib.rs
engine-rs/crates/protocol/protocol-project-bundle/src/: lib.rs
engine-rs/crates/protocol/protocol-project-content/: Cargo.toml
engine-rs/crates/protocol/protocol-project-content/src/: lib.rs
engine-rs/crates/protocol/protocol-render/src/: lib.rs  material_feedback.rs  pick.rs
engine-rs/crates/protocol/protocol-replay/src/: lib.rs
engine-rs/crates/protocol/protocol-scene/: Cargo.toml
engine-rs/crates/protocol/protocol-scene/src/: lib.rs
engine-rs/crates/protocol/protocol-telemetry/: Cargo.toml
engine-rs/crates/protocol/protocol-telemetry/src/: lib.rs
engine-rs/crates/protocol/protocol-view/: Cargo.toml
engine-rs/crates/protocol/protocol-view/src/: lib.rs
engine-rs/crates/protocol/protocol-voxel-annotation/: Cargo.toml
engine-rs/crates/protocol/protocol-voxel-annotation/src/: lib.rs
engine-rs/crates/protocol/protocol-voxel-asset/src/: lib.rs
engine-rs/crates/protocol/protocol-voxel-conversion/: Cargo.toml
engine-rs/crates/protocol/protocol-voxel-conversion/src/: lib.rs
engine-rs/crates/protocol/protocol-world-bundle/: Cargo.toml
engine-rs/crates/protocol/protocol-world-bundle/src/: lib.rs
engine-rs/crates/render/render-animation/src/: lib.rs
engine-rs/crates/render/render-animation/tests/: projector.rs
engine-rs/crates/render/render-bridge/: Cargo.toml
engine-rs/crates/render/render-bridge/src/: json.rs  lib.rs  presentation.rs  voxel.rs
engine-rs/crates/render/render-bridge/tests/: generated_tunnel_projection.rs  scene_projection_golden.rs  sprite_atlas_golden.rs  voxel_chunks_golden.rs  voxel_materials_golden.rs
engine-rs/crates/rules/gameplay-module-sdk/src/: authoring.rs  lib.rs  (+5 more)
engine-rs/crates/rules/gameplay-runtime-host/: Cargo.toml
engine-rs/crates/rules/rule-lifecycle/: Cargo.toml
engine-rs/crates/rules/rule-project-bundle/: Cargo.toml
engine-rs/crates/rules/rule-scheduler/: Cargo.toml
engine-rs/crates/rules/rule-voxel-edit/: Cargo.toml
engine-rs/crates/rules/rule-world-bundle/: Cargo.toml
engine-rs/crates/services/svc-combat/: Cargo.toml
engine-rs/crates/services/svc-entity-authoring/: Cargo.toml
engine-rs/crates/services/svc-environment-authoring/: Cargo.toml
engine-rs/crates/services/svc-levelgen/: Cargo.toml
engine-rs/crates/services/svc-pathfinding/: Cargo.toml
engine-rs/crates/services/svc-physics/: Cargo.toml
engine-rs/crates/services/svc-policy-view/: Cargo.toml
engine-rs/crates/services/svc-project-content/: Cargo.toml
engine-rs/crates/services/svc-serialization/: Cargo.toml
engine-rs/crates/services/svc-spatial/: Cargo.toml
engine-rs/crates/services/svc-volume/: Cargo.toml
engine-rs/crates/sim/sim-replay/: Cargo.toml
engine-rs/crates/sim/sim-runner/: Cargo.toml
engine-rs/crates/sim/sim-validator/: Cargo.toml
engine-rs/crates/state/core-catalog/: Cargo.toml
engine-rs/crates/state/core-commands/: Cargo.toml
engine-rs/crates/state/core-entity/: Cargo.toml
engine-rs/crates/state/core-events/: Cargo.toml
engine-rs/crates/state/core-scene/: Cargo.toml
engine-rs/crates/state/core-voxel/: Cargo.toml
engine-rs/crates/tools/fixture-maker/: Cargo.toml
engine-rs/crates/tools/protocol-dump/: Cargo.toml
engine-rs/crates/tools/replay-tool/: Cargo.toml
engine-rs/crates/tools/scene-diagnostics/: Cargo.toml
engine-rs/crates/tools/voxel-diagnostics/: Cargo.toml
engine-rs/crates/wasm/wasm-api/: Cargo.toml
harness/fixtures/canonical-project-consumer/: Cargo.toml
harness/fixtures/canonical-project-consumer/project/: asha.project-bundle.json
harness/fixtures/canonical-project-consumer/src/: main.rs
harness/fixtures/composed-native-provider/: Cargo.toml  smoke.mjs
harness/fixtures/composed-native-provider/src/: lib.rs
public-rust/: Cargo.toml
public-rust/gameplay-module-conformance/: Cargo.toml
public-rust/gameplay-module-conformance/src/: lib.rs
public-rust/native-runtime-provider/: Cargo.toml
public-rust/native-runtime-provider/src/: lib.rs
public-rust/runtime-session-composition/: Cargo.toml
public-rust/runtime-session-composition/src/: lib.rs
(+636 files in other folders)
