[workspace]
resolver = "2"

members = [
    # Foundation
    "crates/foundation/core-ids",
    "crates/foundation/core-math",
    "crates/foundation/core-time",
    "crates/foundation/core-error",
    "crates/foundation/core-collections",
    "crates/foundation/core-space",
    "crates/foundation/core-assets",

    # State
    "crates/state/core-voxel",
    "crates/state/core-entity",
    "crates/state/core-scene",
    "crates/state/core-state",
    "crates/state/core-events",
    "crates/state/core-commands",
    "crates/state/core-snapshot",
    "crates/state/core-catalog",

    # Protocol
    "crates/protocol/protocol-ids",
    "crates/protocol/protocol-script",
    "crates/protocol/protocol-render",
    "crates/protocol/protocol-replay",
    "crates/protocol/protocol-telemetry",
    "crates/protocol/protocol-diagnostics",
    "crates/protocol/protocol-scene",
    "crates/protocol/protocol-world-bundle",
    "crates/protocol/protocol-assets",
    "crates/protocol/protocol-codegen",

    # Sim
    "crates/sim/sim-kernel",
    "crates/sim/sim-validator",
    "crates/sim/sim-applier",
    "crates/sim/sim-replay",
    "crates/sim/sim-runner",

    # Services
    "crates/services/svc-rng",
    "crates/services/svc-spatial",
    "crates/services/svc-collision",
    "crates/services/svc-physics",
    "crates/services/svc-pathfinding",
    "crates/services/svc-serialization",
    "crates/services/svc-volume",
    "crates/services/svc-mesh",

    # Rules
    "crates/rules/rule-lifecycle",
    "crates/rules/rule-process",
    "crates/rules/rule-scheduler",
    "crates/rules/rule-relationship",
    "crates/rules/rule-state-machine",
    "crates/rules/rule-voxel-edit",
    "crates/rules/rule-world-bundle",

    # Render
    "crates/render/render-bridge",
    "crates/render/render-debug",

    # WASM
    "crates/wasm/wasm-api",

    # Bridge (ADR 0006). `native-bridge` is intentionally NOT a member: it depends
    # on `napi` and needs a native build toolchain, so it is excluded to keep the
    # default workspace build offline/CI-clean. See engine-rs/crates/bridge/native-bridge.
    "crates/bridge/runtime-bridge-api",

    # Tools
    "crates/tools/replay-tool",
    "crates/tools/snapshot-diff",
    "crates/tools/protocol-dump",
    "crates/tools/state-inspector",
    "crates/tools/fixture-maker",
    "crates/tools/voxel-diagnostics",
    "crates/tools/scene-diagnostics",
]

# native-bridge needs `napi` + a native build toolchain + network to fetch crates.
# Excluded so the default workspace build/CI is offline-clean; build it explicitly
# with `cargo build -p native-bridge` when the toolchain is available (ADR 0006).
exclude = [
    "crates/bridge/native-bridge",
]

[workspace.package]
version     = "0.1.0"
edition     = "2021"
license     = "UNLICENSED"

[workspace.lints.rust]
unsafe_code = "forbid"
