[package]
name = "asha-canonical-project-consumer-fixture"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "generate-canonical-project"
path = "src/main.rs"

[dependencies]
asha-gameplay-module-fixture = { path = "../gameplay-module-sdk/downstream-module" }
asha-runtime-session-composition = { path = "../../../public-rust/runtime-session-composition" }
core-ids = { path = "../../../engine-rs/crates/foundation/core-ids" }
protocol-voxel-asset = { path = "../../../engine-rs/crates/protocol/protocol-voxel-asset" }
protocol-project-bundle = { path = "../../../engine-rs/crates/protocol/protocol-project-bundle" }
svc-serialization = { path = "../../../engine-rs/crates/services/svc-serialization" }
svc-voxel-asset = { path = "../../../engine-rs/crates/services/svc-voxel-asset" }
serde_json = "1"

[workspace]
