# native-bridge — the napi-rs runtime transport addon (ADR 0006).
#
# EXCLUDED from the default workspace build (see engine-rs/Cargo.toml
# `workspace.exclude`): it depends on `napi`/`napi-derive` and a native build
# toolchain, so building it requires network access to fetch crates plus the
# `@napi-rs/cli`. The offline workspace build/CI stays green without it.
#
# Build (when toolchain available):
#   cargo build -p native-bridge --release
#   napi build --platform --release   # produces native-bridge.<platform>.node
[package]
name    = "native-bridge"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
runtime-bridge-api = { path = "../runtime-bridge-api" }
# napi pulled only here — the only crate in the workspace allowed to depend on it
# (enforced by governance/ownership.toml `may_not_depend_on`).
napi        = { version = "2", default-features = false, features = ["napi8"] }
napi-derive = "2"

[build-dependencies]
napi-build = "2"
