# native-bridge — the napi-rs runtime transport addon (ADR 0006).
#
# Standalone workspace: EXCLUDED from the engine-rs workspace so the default
# build/CI stays offline-clean (the ADR flags napi network/ABI cost as a risk).
# Build it explicitly when the toolchain is available:
#   cargo build -p native-bridge --release        # produces a cdylib
#   harness/ci/check-native.sh                     # builds + copies .node + smoke test
[package]
name    = "native-bridge"
version = "0.1.0"
edition = "2021"
license = "UNLICENSED"

# Own workspace root so `cargo build` here doesn't search for the engine-rs root.
[workspace]

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
runtime-bridge-api = { path = "../runtime-bridge-api" }
core-math = { path = "../../foundation/core-math" }
core-space = { path = "../../foundation/core-space" }
core-ids = { path = "../../foundation/core-ids" }
protocol-assets = { path = "../../protocol/protocol-assets" }
protocol-diagnostics = { path = "../../protocol/protocol-diagnostics" }
protocol-game-extension = { path = "../../protocol/protocol-game-extension" }
protocol-render = { path = "../../protocol/protocol-render" }
protocol-scene = { path = "../../protocol/protocol-scene" }
protocol-view = { path = "../../protocol/protocol-view" }
protocol-voxel-asset = { path = "../../protocol/protocol-voxel-asset" }
render-bridge = { path = "../../render/render-bridge" }
# napi pulled only here — the only crate in the repo allowed to depend on it
# (enforced by governance/ownership.toml `may_not_depend_on`).
napi        = { version = "2", default-features = false, features = ["napi8"] }
napi-derive = "2"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"

[build-dependencies]
napi-build = "2"

[dev-dependencies]
core-space = { path = "../../foundation/core-space" }
core-voxel = { path = "../../state/core-voxel" }

[profile.release]
lto = true
