[package]
name    = "runtime-bridge-api"
version.workspace = true
edition.workspace = true

[package.metadata.asha.public-surface]
tier = 1
role = "rust-bridge-boundary"
direct-consumer-import = false
allowed-consumers = ["transport-implementations", "conformance-tests"]
notes = "asha-demo v1 consumes @asha/runtime-bridge and @asha/contracts; this crate remains the Rust manifest/types boundary rather than a direct consumer dependency."

[lints]
workspace = true

# Bridge layer (ADR 0006). Owns the manifest + N-API-visible boundary types and
# conformance helpers. Must NOT depend on `napi` or `wasm-bindgen` — those are
# transport details that live in `native-bridge` / `wasm-api`.
[dependencies]
core-ids   = { path = "../../foundation/core-ids" }
core-error = { path = "../../foundation/core-error" }
protocol-view = { path = "../../protocol/protocol-view" }
# Voxel command submission → Rust authority validation/apply (launchable-voxel, #2436).
core-space      = { path = "../../foundation/core-space" }
core-voxel      = { path = "../../state/core-voxel" }
core-commands   = { path = "../../state/core-commands" }
svc-spatial     = { path = "../../services/svc-spatial" }
svc-volume      = { path = "../../services/svc-volume" }
# Authority voxel raycast for the pick verb (launchable-voxel picking, #2437).
svc-collision   = { path = "../../services/svc-collision" }
rule-voxel-edit = { path = "../../rules/rule-voxel-edit" }
