[package]
name    = "runtime-bridge-api"
version.workspace = true
edition.workspace = true

[package.metadata.asha.public-surface]
tier = 1
role = "rust-bridge-boundary"
direct-consumer-import = false
allowed-consumers = ["transport-implementations", "conformance-tests"]
notes = "asha-demo v1 consumes @asha/runtime-bridge and @asha/contracts; this crate remains the Rust manifest/types boundary rather than a direct consumer dependency."

[lints]
workspace = true

# Bridge layer (ADR 0006). Owns the manifest + N-API-visible boundary types and
# conformance helpers. Must NOT depend on `napi` or `wasm-bindgen` — those are
# transport details that live in `native-bridge` / `wasm-api`.
[dependencies]
core-ids   = { path = "../../foundation/core-ids" }
core-error = { path = "../../foundation/core-error" }
core-math  = { path = "../../foundation/core-math" }
protocol-view = { path = "../../protocol/protocol-view" }
protocol-diagnostics = { path = "../../protocol/protocol-diagnostics" }
protocol-voxel-conversion = { path = "../../protocol/protocol-voxel-conversion" }
# Voxel command submission → Rust authority validation/apply (launchable-voxel, #2436).
core-space      = { path = "../../foundation/core-space" }
core-voxel      = { path = "../../state/core-voxel" }
core-commands   = { path = "../../state/core-commands" }
core-entity     = { path = "../../state/core-entity" }
svc-spatial     = { path = "../../services/svc-spatial" }
svc-volume      = { path = "../../services/svc-volume" }
# Runtime evidence over authority state (mesh summaries/hashes, world hashes).
svc-mesh        = { path = "../../services/svc-mesh" }
svc-serialization = { path = "../../services/svc-serialization" }
svc-pathfinding = { path = "../../services/svc-pathfinding" }
svc-voxel-conversion = { path = "../../services/svc-voxel-conversion" }
# Authority voxel raycast for the pick verb (launchable-voxel picking, #2437).
svc-collision   = { path = "../../services/svc-collision" }
rule-voxel-edit = { path = "../../rules/rule-voxel-edit" }
# FPS/ECRP RuntimeSession authority substrate. The bridge exposes typed verbs;
# rule-lifecycle owns ProjectBundle bootstrap, combat/lifecycle, and replay hashes.
protocol-entity-authoring = { path = "../../protocol/protocol-entity-authoring" }
rule-lifecycle = { path = "../../rules/rule-lifecycle" }
svc-combat = { path = "../../services/svc-combat" }
