[package]
name    = "runtime-bridge-api"
version.workspace = true
edition.workspace = true

[package.metadata.asha.public-surface]
tier = 1
role = "rust-bridge-boundary"
direct-consumer-import = false
allowed-consumers = ["transport-implementations", "conformance-tests"]
notes = "asha-demo v1 consumes @asha/runtime-bridge and @asha/contracts; this crate remains the Rust manifest/types boundary rather than a direct consumer dependency."

[lints]
workspace = true

# Bridge layer (ADR 0006). Owns the manifest + N-API-visible boundary types and
# conformance helpers. Must NOT depend on `napi` or `wasm-bindgen` — those are
# transport details that live in `native-bridge` / `wasm-api`.
[dependencies]
core-ids   = { path = "../../foundation/core-ids" }
core-error = { path = "../../foundation/core-error" }
core-math  = { path = "../../foundation/core-math" }
core-assets = { path = "../../foundation/core-assets" }
core-catalog = { path = "../../state/core-catalog" }
core-scene = { path = "../../state/core-scene" }
protocol-scene = { path = "../../protocol/protocol-scene" }
protocol-view = { path = "../../protocol/protocol-view" }
protocol-assets = { path = "../../protocol/protocol-assets" }
protocol-render = { path = "../../protocol/protocol-render" }
protocol-presentation = { path = "../../protocol/protocol-presentation" }
protocol-diagnostics = { path = "../../protocol/protocol-diagnostics" }
protocol-game-rules = { path = "../../protocol/protocol-game-rules" }
protocol-input = { path = "../../protocol/protocol-input" }
protocol-time-control = { path = "../../protocol/protocol-time-control" }
protocol-voxel-asset = { path = "../../protocol/protocol-voxel-asset" }
protocol-voxel-annotation = { path = "../../protocol/protocol-voxel-annotation" }
protocol-voxel-conversion = { path = "../../protocol/protocol-voxel-conversion" }
protocol-voxel-edit-history = { path = "../../protocol/protocol-voxel-edit-history" }
# Voxel command submission → Rust authority validation/apply (launchable-voxel, #2436).
core-space      = { path = "../../foundation/core-space" }
core-voxel      = { path = "../../state/core-voxel" }
core-commands   = { path = "../../state/core-commands" }
core-entity     = { path = "../../state/core-entity" }
svc-spatial     = { path = "../../services/svc-spatial" }
svc-volume      = { path = "../../services/svc-volume" }
# Runtime evidence over authority state (mesh summaries/hashes, world hashes).
svc-mesh        = { path = "../../services/svc-mesh" }
svc-mesh-import = { path = "../../services/svc-mesh-import" }
svc-serialization = { path = "../../services/svc-serialization" }
svc-pathfinding = { path = "../../services/svc-pathfinding" }
svc-voxel-asset = { path = "../../services/svc-voxel-asset" }
svc-voxel-annotation = { path = "../../services/svc-voxel-annotation" }
svc-voxel-conversion = { path = "../../services/svc-voxel-conversion" }
svc-game-rules = { path = "../../services/svc-game-rules" }
svc-levelgen = { path = "../../services/svc-levelgen" }
# Authority voxel raycast for the pick verb (launchable-voxel picking, #2437).
svc-collision   = { path = "../../services/svc-collision" }
rule-voxel-edit = { path = "../../rules/rule-voxel-edit" }
# FPS/ECRP RuntimeSession authority substrate. The bridge exposes typed verbs;
# rule-lifecycle owns ProjectBundle bootstrap, combat/lifecycle, and replay hashes.
protocol-entity-authoring = { path = "../../protocol/protocol-entity-authoring" }
game-rule-extension = { path = "../../rules/game-rule-extension" }
rule-gameplay-fabric = { path = "../../rules/rule-gameplay-fabric" }
rule-lifecycle = { path = "../../rules/rule-lifecycle" }
rule-input = { path = "../../rules/rule-input" }
svc-combat = { path = "../../services/svc-combat" }
sim-runner = { path = "../../sim/sim-runner" }
render-audio = { path = "../../render/render-audio" }
render-billboard = { path = "../../render/render-billboard" }
render-particle = { path = "../../render/render-particle" }
render-animation = { path = "../../render/render-animation" }
render-telemetry-overlay = { path = "../../render/render-telemetry-overlay" }
rule-animation-controller = { path = "../../rules/rule-animation-controller" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
