[package]
name = "protocol-presentation"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
core-ids = { path = "../../foundation/core-ids" }
protocol-render = { path = "../protocol-render" }
protocol-scene = { path = "../protocol-scene" }
serde = { version = "1", features = ["derive"] }
