[package]
name    = "render-bridge"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
core-ids       = { path = "../../foundation/core-ids" }
core-assets    = { path = "../../foundation/core-assets" }
core-math      = { path = "../../foundation/core-math" }
core-state     = { path = "../../state/core-state" }
core-scene     = { path = "../../state/core-scene" }
core-catalog   = { path = "../../state/core-catalog" }
core-voxel     = { path = "../../state/core-voxel" }
core-space     = { path = "../../foundation/core-space" }
svc-spatial    = { path = "../../services/svc-spatial" }
svc-mesh       = { path = "../../services/svc-mesh" }
protocol-render = { path = "../../protocol/protocol-render" }

[dev-dependencies]
svc-levelgen  = { path = "../../services/svc-levelgen" }
svc-volume     = { path = "../../services/svc-volume" }
