[package]
name = "gameplay-runtime-host"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
core-entity = { path = "../../state/core-entity" }
core-ids = { path = "../../foundation/core-ids" }
core-math = { path = "../../foundation/core-math" }
core-scene = { path = "../../state/core-scene" }
gameplay-module-sdk = { path = "../gameplay-module-sdk" }
protocol-game-extension = { path = "../../protocol/protocol-game-extension" }
protocol-diagnostics = { path = "../../protocol/protocol-diagnostics" }
protocol-entity-authoring = { path = "../../protocol/protocol-entity-authoring" }
protocol-project-bundle = { path = "../../protocol/protocol-project-bundle" }
protocol-project-content = { path = "../../protocol/protocol-project-content" }
rule-gameplay-fabric = { path = "../rule-gameplay-fabric" }
rule-project-bundle = { path = "../rule-project-bundle" }
rule-scheduler = { path = "../rule-scheduler" }
rule-trigger-volume = { path = "../rule-trigger-volume" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
svc-serialization = { path = "../../services/svc-serialization" }
svc-gameplay-fabric = { path = "../../services/svc-gameplay-fabric" }
svc-entity-authoring = { path = "../../services/svc-entity-authoring" }
svc-project-content = { path = "../../services/svc-project-content" }

[dev-dependencies]
