[package]
name    = "rule-project-bundle"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
core-ids          = { path = "../../foundation/core-ids" }
core-math         = { path = "../../foundation/core-math" }
core-assets       = { path = "../../foundation/core-assets" }
core-space        = { path = "../../foundation/core-space" }
core-voxel        = { path = "../../state/core-voxel" }
core-events       = { path = "../../state/core-events" }
core-entity       = { path = "../../state/core-entity" }
core-scene        = { path = "../../state/core-scene" }
svc-volume        = { path = "../../services/svc-volume" }
svc-spatial       = { path = "../../services/svc-spatial" }
svc-serialization = { path = "../../services/svc-serialization" }
svc-gameplay-fabric = { path = "../../services/svc-gameplay-fabric" }
svc-voxel-annotation = { path = "../../services/svc-voxel-annotation" }
protocol-voxel-annotation = { path = "../../protocol/protocol-voxel-annotation" }
protocol-game-extension = { path = "../../protocol/protocol-game-extension" }
protocol-project-content = { path = "../../protocol/protocol-project-content" }
protocol-project-bundle = { path = "../../protocol/protocol-project-bundle" }
protocol-diagnostics = { path = "../../protocol/protocol-diagnostics" }
rule-voxel-edit   = { path = "../rule-voxel-edit" }
rule-gameplay-fabric = { path = "../rule-gameplay-fabric" }
rule-trigger-volume = { path = "../rule-trigger-volume" }
gameplay-module-sdk = { path = "../gameplay-module-sdk" }
svc-project-content = { path = "../../services/svc-project-content" }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
